#2 fix flex-gap safari

--- a/02-Udemy/-01-HTML-CSS-Jonas/Code/09-Omnifood-Optimization/css/queries.css
+++ b/02-Udemy/-01-HTML-CSS-Jonas/Code/09-Omnifood-Optimization/css/queries.css
@@ -151,7 +151,9 @@ they always equal to the browser's config (default 16px) */
     top: 0;
     right: 0;
     padding: 8rem;
-    background-color: #f5cba7ee;
+    background-color: #f5cba7dd;
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px); /* to support safari */
     height: 100vh;
     width: 60%;
     z-index: 1;
