--- a/02-Udemy/-01-HTML-CSS-Jonas/Code/09-Omnifood-Optimization/css/style.css
+++ b/02-Udemy/-01-HTML-CSS-Jonas/Code/09-Omnifood-Optimization/css/style.css
@@ -87,7 +87,8 @@
   width: 100%;
   height: 8rem;
   background-color: #f5cba7ee;
-  z-index: 9999;
+  box-shadow: 0 0 1.4rem 1.6rem #0002;
+  z-index: 1;
   transition: all 0.5s;
 }
 
